--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <script src="./js/bonus.js" type="module"></script>
+    <!-- <script src="./js/bonus.js" type="module"></script> -->
+    <script src="./js/bonys_Anrej.js" type="module"></script>
 </body>
 
 </html>
